# Ai_ML

./: Cargo.toml  FINAL_REFINEMENTS.md  MINECRAFT_CLONE_SUMMARY.md  perceptron.c
src/: main.rs
src/audio/: mod.rs
src/engine/: mod.rs  state.rs  time.rs
src/game/: inventory.rs  mod.rs  physics.rs  player.rs
src/input/: mod.rs
src/networking/: mod.rs
src/rendering/: camera.rs  chunk_renderer.rs  mod.rs  shader.rs  skybox.rs  texture.rs  vertex.rs
src/rendering/shaders/: block.wgsl
src/ui/: mod.rs
src/utils/: mod.rs
src/world/: block.rs  chunk.rs  generation.rs  lighting.rs  mod.rs
